<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_forums">

    <fragment
        android:id="@+id/navigation_forums"
        android:name="com.du.driverunison.ui.forums.ForumsFragment"
        android:label="@string/title_forums"
        tools:layout="@layout/fragment_forums" />

    <fragment
        android:id="@+id/navigation_cars"
        android:name="com.du.driverunison.ui.cars.CarsFragment"
        android:label="@string/title_cars"
        tools:layout="@layout/fragment_cars" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.du.driverunison.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>