<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CarDetailedFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        app:cardCornerRadius="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="5dp">
        <ImageView
            android:id="@+id/detailed_model_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/car_default_filler4"
            app:layout_collapseMode="parallax"/>

        <!--            <androidx.appcompat.widget.Toolbar-->
        <!--                android:id="@+id/toolbar"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="?attr/actionBarSize"-->
        <!--                app:layout_collapseMode="pin"/>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="start|bottom"
            android:paddingBottom="3sp"
            android:background="@color/black_transparent">

            <TextView
                android:id="@+id/detailed_model_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:paddingStart="12sp"
                android:textColor="@color/white_smoked"
                android:text="@string/detailed_model_name_filler"
                android:textSize="15sp"
                android:textStyle="italic"
                android:textAppearance="?attr/textAppearanceListItem" />
            <TextView
                android:id="@+id/detailed_model_years"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".01"
                android:paddingEnd="10sp"
                android:textColor="@color/white_smoked"
                android:layout_marginEnd="5sp"
                android:gravity="end"
                android:text="@string/detailed_model_years_filler"
                android:textSize="14sp"
                android:textStyle="italic"
                android:textAppearance="?attr/textAppearanceListItem"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="11"
    android:layout_marginHorizontal="5sp"
    android:layout_marginVertical="10sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".01"
                android:textStyle="bold"
                android:gravity="start"
                android:text="Length"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".01"
                android:src="@mipmap/ic_car_length"/>
            <TextView
                android:id="@+id/detailed_model_length"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".005"
                android:textStyle="bold"
                android:gravity="end"
                android:text="@string/detailed_model_length_filler"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".01"
                android:textStyle="bold"
                android:gravity="start"
                android:text="Width"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".01"
                android:src="@mipmap/ic_car_width"/>
            <TextView
                android:id="@+id/detailed_model_width"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".005"
                android:textStyle="bold"
                android:gravity="end"
                android:text="@string/detailed_model_width_filler"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".01"
                android:textStyle="bold"
                android:gravity="start"
                android:text="Height"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".01"
                android:src="@mipmap/ic_car_height"/>
            <TextView
                android:id="@+id/detailed_model_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".005"
                android:textStyle="bold"
                android:gravity="end"
                android:text="@string/detailed_model_height_filler"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".01"
                android:textStyle="bold"
                android:gravity="start"
                android:text="Wheelbase"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".01"
                android:src="@mipmap/ic_car_length"/>
            <TextView
                android:id="@+id/detailed_model_wheelbase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".005"
                android:textStyle="bold"
                android:gravity="end"
                android:text="@string/detailed_model_wheelbase_filler"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".01"
                android:textStyle="bold"
                android:gravity="start"
                android:text="Trunk size"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".01"
                android:src="@mipmap/ic_car_trunk"/>
            <TextView
                android:id="@+id/detailed_model_trunk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".008"
                android:textStyle="bold"
                android:gravity="end"
                android:text="@string/detailed_model_trunk_filler"/>

        </LinearLayout>
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".1"
            android:layout_margin="8dp"
            android:background="?android:attr/listDivider" />

        <!--                    <TextView-->
        <!--                        android:layout_width="match_parent"-->
        <!--                        android:layout_height="wrap_content"-->
        <!--                        android:layout_marginTop="10dp"-->
        <!--                        android:gravity="center"-->
        <!--                        android:text="nesto"/>-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_motor_specs_car_detailed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/car_motor_spec_item"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>



</LinearLayout>