<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CarDetailedActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="24dp"
            android:layout_marginHorizontal="4dp">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/blue_dark"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/detailed_model_iv"
                    android:layout_width="match_parent"
                    android:layout_height="220sp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/car_default_filler4"
                    app:layout_collapseMode="parallax"/>

    <!--            <androidx.appcompat.widget.Toolbar-->
    <!--                android:id="@+id/toolbar"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="?attr/actionBarSize"-->
    <!--                app:layout_collapseMode="pin"/>-->
                <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </androidx.cardview.widget.CardView>


    </com.google.android.material.appbar.AppBarLayout>

<!--    <include layout="@layout/content_car_detailed" />-->

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/fab"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="bottom|end"-->
<!--        android:layout_marginEnd="@dimen/fab_margin"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        app:srcCompat="@android:drawable/ic_dialog_email" />-->




    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_smoke"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6sp"
                android:layout_marginVertical="10sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10sp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/detailed_model_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/detailed_model_name_filler"
                            android:textAllCaps="true"
                            android:textStyle="italic"
                            android:textAppearance="?attr/textAppearanceListItem" />
                        <TextView
                            android:id="@+id/detailed_model_years"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".1"
                            android:layout_marginEnd="5sp"
                            android:gravity="end"
                            android:text="@string/detailed_model_years_filler"
                            android:textStyle="italic"
                            android:textAppearance="?attr/textAppearanceListItem"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="24sp"
                        android:layout_marginBottom="8sp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="Length"/>
                        <TextView
                            android:id="@+id/detailed_model_length"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".1"
                            android:gravity="end"
                            android:text="@string/detailed_model_length_filler"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="8sp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="Width"/>
                        <TextView
                            android:id="@+id/detailed_model_width"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".1"
                            android:gravity="end"
                            android:text="@string/detailed_model_width_filler"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="8sp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="Height"/>
                        <TextView
                            android:id="@+id/detailed_model_height"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".1"
                            android:gravity="end"
                            android:text="@string/detailed_model_height_filler"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="8sp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="Wheelbase"/>
                        <TextView
                            android:id="@+id/detailed_model_wheelbase"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".1"
                            android:gravity="end"
                            android:text="@string/detailed_model_wheelbase_filler"/>

                    </LinearLayout>
                    <View
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        android:background="?android:attr/listDivider" />

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginTop="10dp"-->
<!--                        android:gravity="center"-->
<!--                        android:text="nesto"/>-->

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_motor_specs_car_detailed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/car_motor_spec_item"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>